--- a/avocado.css
+++ b/avocado.css
@@ -32,6 +32,7 @@ footer {
 
 #about {
   background-color: #f1f1f1;
+  display: none;
   margin: 10px 0px 20px 0px;
   padding: 20px 20px 10px 20px;
 }
